force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors fired throughout the application. Purely to ease the maintenance. No access needed for users of the app or admins.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>