force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>The cause of the error</description>
    <inlineHelpText>The cause of the error</inlineHelpText>
    <label>Cause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>