force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Error_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Address__c</fullName>
    <defaultValue>$CustomMetadata.Setting__mdt.Error_Email_Address.Value__c</defaultValue>
    <label>Error Email Address</label>
    <type>Email</type>
</CustomField>