force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>The line number the error occurred on.</description>
    <inlineHelpText>The line number the error occurred on.</inlineHelpText>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>