force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message logged. Message of the exception if an exception has been logged.</description>
    <inlineHelpText>The message logged</inlineHelpText>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>