force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set in the handleAfterEventInsert method to true if an email needs to be send to the support email address configured in the Setting error email. If checked the after insert trigger on Error Log itself will send an email to the support email address. See https://salesforce.stackexchange.com/questions/221708/does-messaging-sendemail-not-work-in-a-platform-event-trigger-context</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>