force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <description>The stacktrace&#39; exception to log</description>
    <inlineHelpText>The stacktrace&#39; exception to log</inlineHelpText>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>