force-app/main/appsolutelyBaseComponents/errorLogUtil/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The exception type</description>
    <inlineHelpText>The exception type</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>